@@ -61,7 +61,7 @@ $old_id = ( empty ( $parent ) ? $old_id : $parent  );
 $old_status = array ();
 
 // Pass all string values through getPostValue.
-$cat_id = getPostValue ( 'cat_id' );
+$cat_id = getValue ( 'cat_id', '-?[0-9]+', true );
 $description = getPostValue ( 'description' );
 $participants = getPostValue ( 'participants' );
 $entry_url = getPostValue ( 'entry_url' );
