@@ -42,7 +42,7 @@ $public = getPostValue ( 'public' );
 $report_name = getPostValue ( 'report_name' );
 $report_user = getPostValue ( 'report_user' );
 $time_range = getPostValue ( 'time_range' );
-$cat_id = getPostValue ( 'cat_id' );
+$cat_id = getValue ( 'cat_id', '-?[0-9]+', true );
 $page_template = getPostValue ( 'page_template' );
 $day_template = getPostValue ( 'day_template' );
 $event_template = getPostValue ( 'event_template' );
