@@ -1,6 +1,7 @@
 $Id$
 
 Version 1.2.1 (Not Yet Released -- CVS!)
+ - Fixed bug [ 2769084 ] xss vulnerability with cat_id in month.php
  - Security Fix: Fixes for cross-site scripting and denial of service.  For
    details of issues:
    http://tasecuritygroup.com/download/SCL-2010-001.txt
